added download speed test logger

--- a/Ping tester.ipynb
+++ b/Ping tester.ipynb
@@ -33,6 +33,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2a0a3954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ping_log = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "873d9d02",
    "metadata": {},
    "outputs": [
@@ -48,7 +58,6 @@
     }
    ],
    "source": [
-    "ping_log = []\n",
     "while True:\n",
     "    time.sleep(1)\n",
     "    cur_time = datetime.now()\n",
